# ascii_art_generator

./: Cargo.toml  README.md
src/: ascii_mapping.rs  ascii_to_image.rs  cli.rs  custom_charset_util.rs  gif_to_ascii.rs  main.rs  output_handler.rs
