[package]
name = "ASCII_Art_Generator"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = '4.4.8', features = ["derive"] }
image = { version = "0.25.0", features = ["gif"] }
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ansi-to-html = "0.2.2"
html-escape = "0.2.13"
rayon = "1.10.0"
